--- a/src/css/style.css
+++ b/src/css/style.css
@@ -252,7 +252,7 @@ main {
 }
 
 .cols-3 {
-  --gridCols: 3;
+  --gridCols: 2;
 }
 
 .tut-split {
@@ -268,6 +268,15 @@ main {
 
 .flex-around {
   --justifyContent: space-around;
+}
+
+@media only screen and (min-width: 900px) {
+  .cols-3 {
+    --gridCols: 3;
+  }
+  .flex {
+    display: flex;
+  }
 }
 
 @media only screen and (min-width: 700px) {
