feature add rep images

--- a/src/components/browse-map/Map.module.css
+++ b/src/components/browse-map/Map.module.css
@@ -102,6 +102,12 @@ h3 {
     height: 80vh; */
   }
 }
+.conInfo p {
+  display: none;
+}
+.rep img {
+  width: 12vw;
+}
 
 .sideCon svg {
   z-index: 1;
