styling hansard links

--- a/src/components/constituency/Constituency.module.css
+++ b/src/components/constituency/Constituency.module.css
@@ -12,16 +12,36 @@
 
 .bills {
   display: block;
-  border: 1px var(--primaryHighlight) dotted;
+  border: 1px var(--secondary) dotted;
   /* border-radius: 10%; */
   background: var(--backgroundHighlight);
 }
 
 .hansard {
   display: block;
-  border: 1px var(--primaryHighlight) dotted;
+  border: 1px var(--secondary) dotted;
   /* border-radius: 10%; */
   background: var(--backgroundHighlight);
+  padding: 0 1vw 0 1vw;
+}
+
+.hansardSession {
+  font-size: var(--h5);
+}
+.hansardH2 {
+  /* font-size: var(--h5); */
+  margin-left: 1vw;
+}
+.hansardH3 {
+  /* font-size: var(--h5); */
+  margin-left: 2vw;
+}
+.hansardLink {
+  /* font-size: var(--h5); */
+  margin-left: 3vw;
+  color: var(--primary);
+  text-decoration: none;
+  border-bottom: 2px var(--secondary) solid;
 }
 
 .rep h2 {
@@ -30,7 +50,7 @@
 
 .repInfo {
   display: block;
-  border: 1px var(--primaryHighlight) dotted;
+  border: 1px var(--secondary) dotted;
   /* border-radius: 10%; */
   background: var(--backgroundHighlight);
 }
@@ -40,7 +60,7 @@
 
 .conDemoData {
   display: block;
-  border: 1px var(--primaryHighlight) dotted;
+  border: 1px var(--secondary) dotted;
   /* border-radius: 10%; */
   background: var(--backgroundHighlight);
 }
