--- a/src/components/constituency/Constituency.module.css
+++ b/src/components/constituency/Constituency.module.css
@@ -10,21 +10,92 @@
   }
 }
 
+.rep h2 {
+  margin: 0;
+}
+.repCard {
+  display: block;
+  border: 1px var(--secondary) dotted;
+  border-radius: 10px;
+  background: var(--backgroundHighlight);
+  margin-bottom: 2vh;
+  padding: 0 1vw 1vh 1vw;
+}
+.repCard h2 {
+  font-size: var(--h3);
+}
+.repCard h3 {
+  font-size: var(--h4);
+  margin: 0;
+  padding: 0;
+}
+
+.repInfo {
+  display: block;
+  border: 1px var(--secondary) dotted;
+  border-radius: 10px;
+  background: var(--backgroundHighlight);
+  padding: 0 1vw 1vh 1vw;
+  margin-bottom: 2vh;
+}
+.repInfo ul li span {
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 920px) {
+  .repCard {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 3fr 2fr;
+  }
+  .repImage {
+    grid-row: 1 / span 2;
+    grid-column: 2 / span 1;
+  }
+  .repCard h2 {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
+  }
+  .repCard h3 {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
+  }
+}
+
 .bills {
   display: block;
   border: 1px var(--secondary) dotted;
-  /* border-radius: 10%; */
+  border-radius: 10px;
   background: var(--backgroundHighlight);
+  margin-bottom: 2vh;
+  padding: 0 1vw 1vh 1vw;
+}
+.bills h3 {
+  margin-bottom: 1rem;
+}
+.billLink {
+  /* font-size: var(--h5); */
+
+  color: var(--primary);
+  text-decoration: none;
+  border-bottom: 2px var(--secondary) solid;
+}
+.billLink:hover {
+  transition: ease 0.2;
+  background: rgba(255, 0, 0, 0.1);
 }
 
 .hansard {
   display: block;
   border: 1px var(--secondary) dotted;
-  /* border-radius: 10%; */
+  border-radius: 10px;
   background: var(--backgroundHighlight);
   padding: 0 1vw 0 1vw;
+  margin-bottom: 2vh;
 }
-
+.hansard h3 {
+  margin-bottom: 1rem;
+}
 .hansardSession {
   font-size: var(--h5);
 }
@@ -43,26 +114,18 @@
   text-decoration: none;
   border-bottom: 2px var(--secondary) solid;
 }
-
-.rep h2 {
-  margin: 0;
-}
-
-.repInfo {
-  display: block;
-  border: 1px var(--secondary) dotted;
-  /* border-radius: 10%; */
-  background: var(--backgroundHighlight);
-}
-.repInfo ul li span {
-  font-weight: bold;
+.hansardLink:hover {
+  transition: ease 0.2;
+  background: rgba(255, 0, 0, 0.1);
 }
 
 .conDemoData {
   display: block;
   border: 1px var(--secondary) dotted;
-  /* border-radius: 10%; */
+  border-radius: 10px;
   background: var(--backgroundHighlight);
+  padding: 0 1vw 1vh 1vw;
+  margin-bottom: 2vh;
 }
 .conDemoData table tbody th {
   text-align: left;
