--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,6 +104,11 @@ header h1 {
   margin: 0;
 }
 
+@media only screen and (max-width: 920px) {
+  header h1 {
+    font-size: var(--h3);
+  }
+}
 footer {
   color: white;
   background: var(--black);
