--- a/src/css/style.css
+++ b/src/css/style.css
@@ -266,11 +266,6 @@ button[disabled] {
   --gridCols: 2;
 }
 
-.tut-split {
-  display: grid;
-  grid-template-columns: 33% 67%;
-}
-
 .flex {
   --justifyContent: space-between;
   display: block; /*override at 500px see @media query*/
@@ -306,4 +301,14 @@ ul {
   padding: 0;
 }
 
+a {
+  /* font-size: var(--h5); */
+  color: var(--primary);
+  text-decoration: none;
+  border-bottom: 2px var(--secondary) solid;
+}
+a:hover {
+  transition: ease 0.2;
+  background: rgba(255, 0, 0, 0.1);
+}
 /*Custom Elements*/
