--- a/src/components/bill/Bill.module.css
+++ b/src/components/bill/Bill.module.css
@@ -1,6 +1,3 @@
-.bills {
-}
-
 .sessionheader {
   display: flex;
   align-items: center;
@@ -20,4 +17,58 @@
 .billName {
   font-size: var(--h6);
   font-weight: 500;
+}
+
+.mainGrid {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-gap: 10px;
+}
+
+@media only screen and (max-width: 920px) {
+  .mainGrid {
+    grid-template-columns: 1fr;
+    grid-gap: 0;
+  }
+}
+
+.billsTemplateName {
+  display: block;
+  border: 1px var(--secondary) dotted;
+  border-radius: 10px;
+  background: var(--backgroundHighlight);
+  padding: 0 1vw 0 1vw;
+  margin-bottom: 2vh;
+}
+
+.billsTemplateName h2 {
+  font-size: var(--h4);
+}
+
+.billsTemplateHansard {
+  display: block;
+  border: 1px var(--secondary) dotted;
+  border-radius: 10px;
+  background: var(--backgroundHighlight);
+  padding: 0 1vw 0 1vw;
+  margin-bottom: 2vh;
+}
+
+.billSponsor {
+  display: block;
+  border: 1px var(--secondary) dotted;
+  border-radius: 10px;
+  background: var(--backgroundHighlight);
+  padding: 0 1vw 0 1vw;
+  margin-bottom: 2vh;
+}
+
+.billSponsor h3,
+.billSponsor a {
+  font-size: var(--h5);
+  margin-bottom: 0;
+}
+
+.billRepImage {
+  max-width: 180px;
 }
