fixed MLA and cons list

--- a/src/components/frontpage/FeatureNav.module.css
+++ b/src/components/frontpage/FeatureNav.module.css
@@ -26,6 +26,19 @@
   font-size: 180%;
 }
 
+.linklist a {
+  border: solid var(--secondary) 2px;
+  margin-bottom: 10px;
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: var(--level-1);
+}
+
+.linklist a:hover {
+  transition: ease 0.2;
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: var(--level-3);
+}
+/* 
 .linklist {
   display: flex;
   flex-direction: column;
@@ -52,4 +65,4 @@
   color: var(--primary);
   margin: 2px 10px;
   font-size: 150%;
-}
+} */
