--- a/src/components/browse-map/Map.module.css
+++ b/src/components/browse-map/Map.module.css
@@ -56,6 +56,15 @@
   text-shadow: 2px 2px var(--accent);
 }
 
+.conInfo h1 {
+  font-size: var(--h3);
+}
+@media only screen and (min-width: 900px) {
+  .conInfo h1 {
+    font-size: var(--h2);
+  }
+}
+
 .conInfo a {
   text-decoration: none;
   color: var(--primary);
@@ -108,12 +117,12 @@
 .rep {
   display: flex;
 }
-.rep img {
-  width: 6vw;
+.repImg {
+  width: 90px;
 }
-@media only screen and (min-width: 720px) {
-  .rep img {
-    width: 8vw;
+@media only screen and (min-width: 900px) {
+  .repImg {
+    width: 120px;
   }
 }
 .rep h3 {
