--- a/src/components/browse-map/Map.module.css
+++ b/src/components/browse-map/Map.module.css
@@ -19,60 +19,14 @@
   width: 70vw;
   height: 70vh;
 }
-@media only screen and (min-width: 480px) {
-  .mainCon {
-    /* top: 25vh;
-    left: 15vh; */
-  }
-}
-@media only screen and (min-width: 600px) {
-  .mainCon {
-    /* top: 20vh;
-    left: 20vh; */
-  }
-}
-@media only screen and (min-width: 720px) {
-  .mainCon {
-    /* top: 15vh;
-    left: 20vh; */
-  }
-}
-@media only screen and (min-width: 900px) {
-  .mainCon {
-    /* top: 10vh;
-    left: 20vh; */
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .mainCon {
-    /* top: 10vh;
-    left: 20vh; */
-  }
-}
-@media only screen and (min-width: 600px) {
+
+@media only screen and (max-width: 900px) {
   .mainCon svg {
-    /* width: 60vw;
-    height: 60vh; */
+    width: 60vw;
+    height: 60vh;
   }
 }
-@media only screen and (min-width: 720px) {
-  .mainCon svg {
-    /* width: 70vw;
-    height: 70vh; */
-  }
-}
-@media only screen and (min-width: 900px) {
-  .mainCon svg {
-    /* width: 80vw;
-    height: 80vh; */
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .mainCon svg {
-    /* width: 80vw;
-    height: 80vh; */
-  }
-}
+
 .conInfo {
   position: absolute;
   display: grid;
@@ -91,7 +45,7 @@
   text-shadow: 2px 2px var(--accent);
   margin: 0;
   padding: 0;
-  font-size: var(--h3);
+  font-size: var(--h2);
 }
 .repImg {
   grid-row: 2 / 3;
@@ -112,10 +66,9 @@
 
   /* background: rgba(255, 255, 255, 0.6);*/
 }
-@media only screen and (min-width: 900px) {
-  .conName {
-    font-size: var(--h2);
-  }
+
+.repImg {
+  width: 100px;
 }
 
 .conLink {
@@ -133,12 +86,38 @@
   background: rgba(255, 255, 255, 0.8);
 }
 
-.repImg {
-  width: 90px;
-}
-@media only screen and (min-width: 900px) {
+@media only screen and (max-width: 900px) {
+  .conInfo {
+    grid-template-columns: 60px 1fr;
+    grid-template-rows: 1fr 100px;
+    left: 10vw;
+    top: 5vh;
+    z-index: 1;
+    /* border: 1px dotted var(--secondary); */
+    /* border: 1px solid green; */
+  }
+
+  .conName {
+    font-size: var(--h4);
+  }
+
   .repImg {
-    width: 100px;
+    width: 60px;
+  }
+
+  .nameAndLink {
+    flex-wrap: nowrap;
+  }
+  .repName {
+    font-size: var(--h6);
+    margin: 5px;
+    text-shadow: 1px 1px var(--accent);
+
+    /* background: rgba(255, 255, 255, 0.6);*/
+  }
+
+  .conLink {
+    margin: 5px;
   }
 }
 
@@ -167,6 +146,11 @@
   text-shadow: 1px 1px var(--accent);
 }
 
+@media only screen and (max-width: 900px) {
+  .sideConName {
+    font-size: var(--smallText);
+  }
+}
 .west svg {
   position: absolute;
   top: 30vh;
@@ -244,6 +228,77 @@
   left: 85vw;
 }
 
+@media only screen and (max-width: 900px) {
+  .west svg {
+    top: 25vh;
+    left: -15vw;
+  }
+  .west h4 {
+    top: 35vh;
+    left: 0vw;
+  }
+  /* 
+  .northWest svg {
+    top: -10vh;
+    left: -15vw;
+  }
+  .northWest h4 {
+    top: 0vh;
+    left: 2vw;
+  } */
+
+  .southWest svg {
+    top: 60vh;
+    left: -15vw;
+  }
+  .southWest h4 {
+    top: 70vh;
+    left: 0vw;
+  }
+  .north svg {
+    top: -10vh;
+    left: 30vw;
+  }
+  .north h4 {
+    top: 0vh;
+    left: 40vw;
+  }
+  .south svg {
+    top: 60vh;
+    left: 30vw;
+  }
+  .south h4 {
+    top: 70vh;
+    left: 40vw;
+  }
+
+  .east svg {
+    top: 25vh;
+    left: 80vw;
+  }
+  .east h4 {
+    top: 35vh;
+    left: 80vw;
+  }
+  .northEast svg {
+    top: -10vh;
+    left: 80vw;
+  }
+  .northEast h4 {
+    top: 0vh;
+    left: 80vw;
+  }
+
+  .southEast svg {
+    top: 60vh;
+    left: 80vw;
+  }
+  .southEast h4 {
+    top: 70vh;
+    left: 80vw;
+  }
+}
+
 .navInstructions {
   pointer-events: none;
   position: absolute;
@@ -254,7 +309,7 @@
   text-align: center;
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (max-width: 900px) {
   .navInstructions {
     top: 75vh;
     font-size: var(--h4);
@@ -268,4 +323,10 @@
   top: 5vh;
   font-size: 24px;
   border-bottom: 1px solid var(--accent);
+}
+
+@media only screen and (max-width: 900px) {
+  .linkHome {
+    font-size: 16px;
+  }
 }
