--- a/src/css/style.css
+++ b/src/css/style.css
@@ -312,7 +312,7 @@ a:hover {
 
 .react {
   height: 22px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(30, 201, 201);
 }
 .gatsby {
   height: 22px;
