fix map phone styling tweak

--- a/src/components/browse-map/Map.module.css
+++ b/src/components/browse-map/Map.module.css
@@ -152,6 +152,10 @@
 }
 
 @media only screen and (max-width: 900px) {
+  .sideCon svg {
+    fill-opacity: 0.3;
+  }
+
   .sideConName {
     font-size: var(--smallText);
   }
