--- a/src/components/frontpage/FeatureNav.module.css
+++ b/src/components/frontpage/FeatureNav.module.css
@@ -28,14 +28,16 @@
 
 .linklist a {
   border: solid var(--secondary) 2px;
-  margin-bottom: 10px;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.7);
   box-shadow: var(--level-1);
+  width: 300px;
+  display: block;
+  margin-bottom: 1px;
 }
 
 .linklist a:hover {
   transition: ease 0.2;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.9);
   box-shadow: var(--level-3);
 }
 /* 
