--- a/src/components/nav/Navbar.module.css
+++ b/src/components/nav/Navbar.module.css
@@ -74,7 +74,7 @@
     flex-direction: column;
     position: fixed;
     width: 100%;
-    height: 150%;
+    height: 150vh;
     justify-content: flex-start;
     padding-top: 10vh;
     background: var(--background);
