--- a/src/components/nav/Navbar.module.css
+++ b/src/components/nav/Navbar.module.css
@@ -142,7 +142,7 @@
   opacity: 1;
   transform: rotate(0deg);
 }
-
+/* style for the active link, not currently being used
 .activeLink {
   color: var(--accent);
-}
+} */
