--- a/src/components/frontpage/FeatureNav.module.css
+++ b/src/components/frontpage/FeatureNav.module.css
@@ -26,13 +26,17 @@
   font-size: 180%;
 }
 
+.featureParagraph {
+  margin: 10px 0 10px 0;
+}
+
 .linklist a {
   border: solid var(--secondary) 2px;
   background: rgba(255, 255, 255, 0.7);
   box-shadow: var(--level-1);
   width: 300px;
   display: block;
-  margin: 0 0 1px -2px;
+  margin: 0 0 4px -2px;
   padding: 0 2px;
 }
 
