--- a/src/components/browse-map/Map.module.css
+++ b/src/components/browse-map/Map.module.css
@@ -76,14 +76,17 @@
   color: var(--primary);
   border: 1px solid;
   padding: 2px 10px 2px 10px;
-  background: rgba(255, 255, 255, 0.6);
+  background: var(--veryLightGrey);
+
   margin: 10px 10px 10px 10px;
   align-self: flex-start;
 }
 
 .conLink:hover {
   transition: ease 0.2;
-  background: rgba(255, 255, 255, 0.8);
+  transform: scale(1.01);
+  background: var(--veryLightGrey);
+  box-shadow: var(--level-3);
 }
 
 @media only screen and (max-width: 900px) {
