--- a/src/components/browse-map/Map.module.css
+++ b/src/components/browse-map/Map.module.css
@@ -42,7 +42,7 @@
 .conName {
   grid-row: 1 / 2;
   grid-column: 1 / 3;
-  text-shadow: 2px 2px var(--accent);
+  text-shadow: 1px 1px var(--accent);
   margin: 0;
   padding: 0;
   font-size: var(--h2);
@@ -62,7 +62,7 @@
 .repName {
   font-size: var(--h4);
   margin: 10px 10px 10px 10px;
-  text-shadow: 2px 2px var(--accent);
+  text-shadow: 1px 1px var(--accent);
 
   /* background: rgba(255, 255, 255, 0.6);*/
 }
@@ -91,8 +91,8 @@
 
 @media only screen and (max-width: 900px) {
   .conInfo {
-    grid-template-columns: 60px 1fr;
-    grid-template-rows: 1fr 100px;
+    grid-template-columns: 40px 1fr;
+    grid-template-rows: 1fr 80px;
     left: 10vw;
     top: 5vh;
     z-index: 1;
@@ -101,18 +101,18 @@
   }
 
   .conName {
-    font-size: var(--h4);
+    font-size: var(--h5);
   }
 
   .repImg {
-    width: 60px;
+    width: 40px;
   }
 
   .nameAndLink {
     flex-wrap: nowrap;
   }
   .repName {
-    font-size: var(--h6);
+    font-size: var(--baseFontSize);
     margin: 5px;
     text-shadow: 1px 1px var(--accent);
 
@@ -121,7 +121,8 @@
 
   .conLink {
     margin: 5px;
-    padding: 1px;
+    padding: 0px 1px;
+    font-size: var(--smallText);
   }
 }
 
