--- a/src/components/browse-map/Map.module.css
+++ b/src/components/browse-map/Map.module.css
@@ -385,3 +385,17 @@
     z-index: 5;
   }
 }
+
+.reload {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 48px;
+  background: transparent;
+  border-bottom: 1px solid var(--accent);
+}
+
+.reload:hover {
+  box-shadow: var(--level-4);
+}
