--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,9 @@
-/* @tailwind base;
+@import 'style.css';
+
+
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 @import 'main.css';
-@import 'normalize.css';
-@import 'style.css'; */
+@import 'normalize.css'; */
