--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,17 +1,3 @@
-
-.navToggle {
-  display: flex;
-  height: 100%;
-  cursor: pointer;
-  justify-content: flex-end;
-}
-
-@media only screen and (min-width: 1024px) {
-  .navToggle {
-    display: none;
-  }
-}
-
 .navBox {
   display: flex;
   height: 100%;
@@ -29,16 +15,6 @@
     padding-top: 5vh;
     background: var(--background);
     background: white;
-    /* background: linear-gradient(
-      130deg,
-      #44a2cd,
-      #999999,
-      white,
-      #d2d3d5,
-      #999999,
-      #d2d3d5,
-      #44a2cd
-    ); */
     transition: all 0.3s ease-in;
     top: 0;
     left: 0;
@@ -50,53 +26,51 @@
   }
 }
 
-
 .hamburger {
-    z-index: 10;
-    background-color: red;
-    width: 30px;
-    height: 3px;
-    transition: all 0.3s linear;
-    align-self: center;
-    position: fixed;
-    transform: rotate(-45deg);
-  }
-  
-  .hamburgerClosed {
-    transform: inherit;
-    position: relative;
-  }
-  
-  .hamburger::before,
-  .hamburger::after {
-    width: 30px;
-    height: 3px;
-    background-color: red;
-    content: "";
-    position: absolute;
-    transition: all 0.3s linear;
-  }
-  
-  .hamburger::before {
-    transform: rotate(-90deg) translate(-10px, 0px);
-    top: -10px;
-  }
-  
-  .hamburgerClosed::before {
-    transform: rotate(0deg);
-  }
-  .hamburger::after {
-    opacity: 0;
-    transform: rotate(90deg);
-    top: 10px;
-  }
-  
-  .hamburgerClosed::after {
-    opacity: 1;
-    transform: rotate(0deg);
-  }
-  /* style for the active link, not currently being used
+  z-index: 10;
+  background-color: var(--color-primary);
+  width: 30px;
+  height: 3px;
+  transition: all 0.3s linear;
+  align-self: center;
+  position: fixed;
+  transform: rotate(-45deg);
+}
+
+.hamburgerClosed {
+  transform: inherit;
+  position: relative;
+}
+
+.hamburger::before,
+.hamburger::after {
+  width: 30px;
+  height: 3px;
+  background-color: var(--color-primary);
+  content: "";
+  position: absolute;
+  transition: all 0.3s linear;
+}
+
+.hamburger::before {
+  transform: rotate(-90deg) translate(-10px, 0px);
+  top: -10px;
+}
+
+.hamburgerClosed::before {
+  transform: rotate(0deg);
+}
+.hamburger::after {
+  opacity: 0;
+  transform: rotate(90deg);
+  top: 10px;
+}
+
+.hamburgerClosed::after {
+  opacity: 1;
+  transform: rotate(0deg);
+}
+/* style for the active link, not currently being used
   .activeLink {
     color: var(--accent);
   } */
-  
