--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,13 +1,13 @@
 :root {
-  --midnight-blue: #001b69ff;
-  --brown: #71441fff;
-  --dark-goldenrod: #b59040ff;
-  --fire-engine-red: #c9072aff;
-  --lincoln-green: #0e4f0eff;
+  --midnight-blue: #001b69;
+  --brown: #71441f;
+  --dark-goldenrod: #b59040;
+  --fire-engine-red: #c9072a;
+  --lincoln-green: #0e4f0e;
 
-  --color-primary: #c9072aff;
-  --color-secondary: #b59040ff;
-  --accent: var(--midnight-blue);
+  --color-primary: #B91C1C;
+  --color-secondary: #b59040;
+  --color-accent: var(--midnight-blue);
   /* ... */
   --p: var(--color-primary);
 }
