--- a/src/components/browse-map/Map.module.css
+++ b/src/components/browse-map/Map.module.css
@@ -1,10 +1,4 @@
-.map {
-  display: flex;
-  justify-content: center;
-}
-
 .mainCon {
-  position: relative;
   /* border: 2px solid red; */
   top: 15vh;
   left: 0vh;
@@ -13,9 +7,9 @@
 .mainCon svg {
   z-index: -1;
   fill-opacity: 0.6;
-  fill: var(--accent);
   fill: white;
-  stroke: var(--primary);
+  stroke: var(--color-primary);
+  /* stroke-width: 6; This is set on the ConSvg react component so it can be normalized depending on which SVG map is showing*/
   width: 70vw;
   height: 70vh;
 }
@@ -29,15 +23,16 @@
 
 .conInfo {
   position: absolute;
-  display: grid;
-  grid-template-columns: 100px 1fr;
-  grid-template-rows: 1fr 150px;
   left: 20vw;
   top: 5vh;
-  z-index: 1;
-  background: rgba(255, 255, 255, 0);
+
+  /* display: grid;
+  grid-template-columns: 100px 1fr;
+  grid-template-rows: 1fr 150px; */
+
+  /* background: rgba(255, 255, 255, 0); */
   /* border: 1px dotted var(--secondary); */
-  /* border: 1px solid green; */
+  border: 1px solid green;
 }
 .conName {
   grid-row: 1 / 2;
