removed focus collapse style

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -52,6 +52,22 @@
     @apply border-secondary;
   }
 
+  /*REMOVE FOCUS STYLING FOR COLLAPSE CONTROL*/
+  .collapse-open .collapse-title,
+  .collapse:focus:not(.collapse-close) .collapse-title,
+  .collapse:not(.collapse-close)
+    input[type="checkbox"]:checked
+    ~ .collapse-title {
+    --tw-bg-opacity: 0 !important;
+  }
+  .collapse-open .collapse-content,
+  .collapse:focus:not(.collapse-close) .collapse-content,
+  .collapse:not(.collapse-close)
+    input[type="checkbox"]:checked
+    ~ .collapse-content {
+    --tw-bg-opacity: 0 !important;
+  }
+
   .text-shadow {
     text-shadow: 1px 1px var(--color-accent);
   }
